[gd_scene load_steps=3 format=3 uid="uid://dwopuk15wh81n"]

[ext_resource type="Script" path="res://resources/game_manager.gd" id="1_80n7t"]
[ext_resource type="Theme" uid="uid://bed6prpoafpry" path="res://assets/theme.tres" id="2_j8grg"]

[node name="GameManager" type="Node"]
script = ExtResource("1_80n7t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("2_j8grg")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="NewGame" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("2_j8grg")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Save" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Save"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("2_j8grg")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Load" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Load"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Stuff"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/MarginContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/Load" to="." method="_on_load_pressed"]
